<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_general">
        <ListPreference
            android:defaultValue="1000"
            android:entries="@array/pref_scan_interval_titles"
            android:entryValues="@array/pref_scan_interval_values"
            android:key="scan_interval"
            android:summary="%s"
            android:title="@string/pref_scan_interval"/>
        <ListPreference
            android:defaultValue="first"
            android:entries="@array/pref_network_order_titles"
            android:entryValues="@array/pref_network_order_values"
            android:key="network_order"
            android:summary="%s"
            android:title="@string/pref_network_order"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="switch_wifi_off_when_not_scanning"
            android:title="@string/pref_switch_wifi_off_when_not_scanning"
            android:summary="@string/pref_switch_wifi_off_when_not_scanning_summary" />

    </PreferenceCategory>
</PreferenceScreen>